# NoxForge

./: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  LICENSES.md  README.md
.github/workflows/: ci.yml  release.yml
aurorae/io.github.loofiboss.noxforge.desktop/: close.svgz  decoration.svgz  io.github.loofiboss.noxforge.desktoprc  maximize.svgz  metadata.desktop  minimize.svgz  restore.svgz
color-schemes/: NoxForgeDark.colors
cursors/NoxForge-Cursors/: coverage.json  index.theme
cursors/NoxForge-Cursors/cursors/: center_ptr  closedhand  color-picker  down-arrow  grabbing  hand  left-arrow  left_ptr_watch  no-drop  openhand  plus  progress  question_arrow  right-arrow  size_fdiag  split_h  top_right_corner  up-arrow  watch  xterm  zoom-in  zoom-out
design/: plasma-glyphs.json  plasma-semantic-contract.json  tokens.json
docs/: ARTWORK.md  COMPATIBILITY.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  INSTALL_FEDORA.md  MANUAL_TESTING.md  NOXFORGE_CODEX_IMPLEMENTATION_PLAN.md  NOXFORGE_V3_PLAN.md  QUICKSTART.md  TROUBLESHOOTING.md  V2_IMPLEMENTATION_PLAN.md  V2_VISUAL_BASELINE.md
docs/evidence/v3/: automated-gate.md  live-session.md  qualification.json
docs/man/: noxforge-doctor.1
docs/releases/: v1.0.0.md  v2.0.0.md  v3.0.0.md
icons/NoxForge/: coverage.json  index.theme
kwin/tabbox/io.github.loofiboss.noxforge.desktop/: metadata.json
kwin/tabbox/io.github.loofiboss.noxforge.desktop/contents/ui/: Tokens.qml  main.qml
look-and-feel/io.github.loofiboss.noxforge.desktop/: manifest.json  metadata.json
look-and-feel/io.github.loofiboss.noxforge.desktop/contents/: defaults
look-and-feel/io.github.loofiboss.noxforge.desktop/contents/layouts/: org.kde.plasma.desktop-layout.js
look-and-feel/io.github.loofiboss.noxforge.desktop/contents/logout/: Logout.qml
look-and-feel/io.github.loofiboss.noxforge.desktop/contents/splash/: Splash.qml
packaging/: noxforge.spec
packaging/copr/: README.md
plasma/desktoptheme/io.github.loofiboss.noxforge.desktop/: colors  metadata.json  plasmarc
plasma/desktoptheme/noxforge/: metadata.json
scripts/: build.py  check_plasma_rasters.py  generate_cursors.py  generate_design_system.py  generate_plasma_svgs.py  generate_sound_theme.py  generate_visual_assets.py  install-system.sh  install.sh  release-check.py  render_evidence.py  render_wallpaper.py  sync_version.py  uninstall-system.sh  uninstall.sh  validate.py
sddm/NoxForge/: Main.qml  metadata.desktop  theme.conf
sounds/NoxForge/: LICENSE  coverage.json  index.theme
sounds/NoxForge/stereo/: audio-volume-change.oga  completion-fail.oga  desktop-logout.oga  device-added.oga  dialog-warning-auth.oga  message-new-email.oga  outcome-success.oga  phone-incoming-call.oga  power-unplug.oga  service-login.oga
src/style/: noxforgepalette.h  noxforgestyle.cpp  noxforgestyle.h  noxforgestyleplugin.cpp  noxforgestyleplugin.json
tests/: test_doctor.py  test_live_evidence.py  test_packaging.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_v2_visual_contract.py  test_visual_evidence.py
tests/qt/: style_probe.cpp
tools/: noxforge-doctor  sddm_renderer.cpp  widget_gallery.cpp
wallpapers/NoxForge/: metadata.json
